Replace WPF control with classic user control. Remove references to WPF libraries.

--- a/x360ce.App.Beta/MainForm.resx
+++ b/x360ce.App.Beta/MainForm.resx
@@ -124,79 +124,79 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACu
-        EAAAAk1TRnQBSQFMAgEBBQEAARgBAQEYAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAAT8BUgH/AQMBSgGCAf8BBgFRAYkB/wEFAU8BiAH/AQUBTwGI
-        Af8BBQFPAYgB/wEFAU8BiAH/AQYBUQGJAf8BAwFKAYIB/wEAAUABUwH/2QABRQFaAf8BWAHnAv8BhgHv
-        Av8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BVwHoAv8BAAFFAVoB/9kAAUQBWQH/AUsB5wH+
-        Af8BVAHqAfwB/wFTAekB+wH/AVMB6QH7Af8BUwHpAfsB/wFTAekB+wH/AVQB6gH8Af8BSwHnAf4B/wEA
-        AUQBWQH/2QABPQFQAf8BOwHOAeYB/wE/AdAB4gH/AT4BzwHiAf8BPgHPAeIB/wE+Ac8B4gH/AT4BzwHi
-        Af8BPwHQAeIB/wE6Ac8B5gH/AQABPQFQAf/ZAAE1AUkB/wEoAbgB0QH/ASkBuAHOAf8BKQG3Ac0B/wEp
-        AbcBzQH/ASkBtwHNAf8BKQG3Ac0B/wEpAbgBzgH/ASgBuAHRAf8BAAE1AUkB/9kAAS8BQQH/ARgBogG6
-        Af8BFQGeAbYB/wERAZ0BtAH/AREBnQG0Af8BEQGdAbQB/wERAZ0BtAH/ARUBngG2Af8BGAGiAboB/wEA
-        AS8BQQH/2QABJgE4Af8BMAGiAbYB/wE4AaQBtgH/ATcBogG1Af8BNQGiAbUB/wE1AaIBtQH/ATcBogG1
-        Af8BOAGkAbYB/wEwAaIBtgH/AQABKAE6Af/ZAAEeATAB/wFMAagBuAH/AYIBsgG/Af8BgAGwAb4B/wGA
-        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/AUwBqAG4Af8BAAEfATEB/9kAARcBJwH/AUwBogGw
-        Af8BkAG2AcEB/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AZABtgHBAf8BTAGiAbAB/wEA
-        ARYBJgH/2QABEgEhAf8BAAETASIB/wEAARMBIgH/AQABEwEiAf8BAAETASIB/wEAARMBIgH/AQABEwEi
-        Af8BAAETASIB/wEAARMBIgH/AQABEwEiAf//AP8A/wD/AP8A/wDeAAFCASMBAAH/AVEBKwEAAf8BVwEw
-        AQAB/wFXAS8BAAH/AVcBLwEAAf8BVwEvAQAB/wFXAS8BAAH/AVcBMAEAAf8BUQErAQAB/wFDASMBAAH/
-        GQABQAEMAf8BAAFPARMB/wEAAVQBFQH/AQABVAEVAf8BAAFUARUB/wEAAVQBFQH/AQABVAEVAf8BAAFU
-        ARUB/wEAAU8BEwH/AQABQQEMAf8YAAE0AS4BJQH/AT0BNgEtAf8BQwE8ATIB/wFDATwBMgH/AUMBPAEy
-        Af8BQwE8ATIB/wFDATwBMgH/AUMBPAEyAf8BPQE2AS0B/wE0AS4BJQH/GgABUgH/AQQBAwGCAf8CBgGJ
-        Af8BBgEFAYgB/wEGAQUBiAH/AQYBBQGIAf8BBgEFAYgB/wIGAYkB/wEEAQMBggH/AgABUwH/GAABSgEn
-        AQAC/wHCAUAC/wHKAVEB/wH+AckBUAH/Af4ByQFQAf8B/gHJAVAB/wH+AckBUAL/AcoBUQL/AcEBQAH/
-        AUsBJwEAAf8ZAAFIAQ8B/wFDAf8BmgH/AVAB/wGrAf8BTgH/AaoB/wFOAf8BqgH/AU4B/wGqAf8BTgH/
-        AaoB/wFQAf8BqwH/AUMB/wGaAf8BAAFIAREB/xgAATkBMwEqAf8B2wHPAbYB/wHhAdYBuwH/AeAB1QG6
-        Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4QHWAbsB/wHbAc4BtgH/ATkBMgEpAf8aAAFaAf8BWAGA
-        Av8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGRAv8BVwGAAv8CAAFaAf8YAAFJASYBAAH/
-        Ae8BsQE7Af8B7QG4AUkB/wHsAbcBSAH/AewBtwFIAf8B7AG3AUgB/wHsAbcBSAH/Ae0BuAFJAf8B7wGx
-        ATsB/wFJASUBAAH/GQABRgEOAf8BOwHpAZEB/wFGAeYBnAH/AUUB5QGbAf8BRQHlAZsB/wFFAeUBmwH/
-        AUUB5QGbAf8BRgHmAZwB/wE7AekBkQH/AQABRgEOAf8YAAE4ATIBKQH/AckBvQGoAf8BzQHCAasB/wHM
-        AcABqgH/AcwBwAGqAf8BzAHAAaoB/wHMAcABqgH/Ac0BwgGrAf8ByQG9AagB/wE4ATIBKQH/GgABWQH/
-        AUsBVAH+Af8BVAGCAfwB/wFTAYEB+wH/AVMBgQH7Af8BUwGBAfsB/wFTAYEB+wH/AVQBggH8Af8BSwFU
-        Af4B/wIAAVkB/xgAAUABHwEAAf8B1AGdAS8B/wHRAaABNwH/AdEBnwE1Af8B0QGfATUB/wHRAZ8BNQH/
-        AdEBnwE1Af8B0QGgATcB/wHUAZ0BLwH/AUABHwEAAf8ZAAE9AQgB/wEuAdEBWwH/ATQBzwGEAf8BMwHO
-        AYMB/wEzAc4BgwH/ATMBzgGDAf8BMwHOAYMB/wE0Ac8BhAH/AS4B0QFbAf8BAAE9AQgB/xgAATIBLAEj
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACs
+        EAAAAk1TRnQBSQFMAgEBBQEAASgBAQEoAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAAT0BUAH/AQEBSAGCAf8BBAFPAYkB/wEDAU0BiAH/AQMBTQGI
+        Af8BAwFNAYgB/wEDAU0BiAH/AQQBTwGJAf8BAQFIAYIB/wEAAT4BUQH/2QABQwFYAf8BVgHnAv8BhgHv
+        Av8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BVQHoAv8BAAFDAVgB/9kAAUIBVwH/AUkB5wH+
+        Af8BUgHqAfwB/wFRAekB+wH/AVEB6QH7Af8BUQHpAfsB/wFRAekB+wH/AVIB6gH8Af8BSQHnAf4B/wEA
+        AUIBVwH/2QABOwFOAf8BOQHOAeYB/wE9AdAB4gH/ATwBzwHiAf8BPAHPAeIB/wE8Ac8B4gH/ATwBzwHi
+        Af8BPQHQAeIB/wE4Ac8B5gH/AQABOwFOAf/ZAAEzAUcB/wEmAbgB0QH/AScBuAHOAf8BJwG3Ac0B/wEn
+        AbcBzQH/AScBtwHNAf8BJwG3Ac0B/wEnAbgBzgH/ASYBuAHRAf8BAAEzAUcB/9kAAS0BPwH/ARYBogG6
+        Af8BEwGeAbYB/wEPAZ0BtAH/AQ8BnQG0Af8BDwGdAbQB/wEPAZ0BtAH/ARMBngG2Af8BFgGiAboB/wEA
+        AS0BPwH/2QABJAE2Af8BLgGiAbYB/wE2AaQBtgH/ATUBogG1Af8BMwGiAbUB/wEzAaIBtQH/ATUBogG1
+        Af8BNgGkAbYB/wEuAaIBtgH/AQABJgE4Af/ZAAEcAS4B/wFKAagBuAH/AYIBsgG/Af8BgAGwAb4B/wGA
+        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/AUoBqAG4Af8BAAEdAS8B/9kAARUBJQH/AUoBogGw
+        Af8BkAG2AcEB/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AZABtgHBAf8BSgGiAbAB/wEA
+        ARQBJAH/2QABEAEfAf8BAAERASAB/wEAAREBIAH/AQABEQEgAf8BAAERASAB/wEAAREBIAH/AQABEQEg
+        Af8BAAERASAB/wEAAREBIAH/AQABEQEgAf//AP8A/wD/AP8A/wDeAAFAASEBAAH/AU8BKQEAAf8BVQEu
+        AQAB/wFVAS0BAAH/AVUBLQEAAf8BVQEtAQAB/wFVAS0BAAH/AVUBLgEAAf8BTwEpAQAB/wFBASEBAAH/
+        GQABPgEKAf8BAAFNAREB/wEAAVIBEwH/AQABUgETAf8BAAFSARMB/wEAAVIBEwH/AQABUgETAf8BAAFS
+        ARMB/wEAAU0BEQH/AQABPwEKAf8YAAEyASwBIwH/ATsBNAErAf8BQQE6ATAB/wFBAToBMAH/AUEBOgEw
+        Af8BQQE6ATAB/wFBAToBMAH/AUEBOgEwAf8BOwE0ASsB/wEyASwBIwH/GgABUAH/AQIBAQGCAf8CBAGJ
+        Af8BBAEDAYgB/wEEAQMBiAH/AQQBAwGIAf8BBAEDAYgB/wIEAYkB/wECAQEBggH/AgABUQH/GAABSAEl
+        AQAC/wHCAT4C/wHKAU8B/wH+AckBTgH/Af4ByQFOAf8B/gHJAU4B/wH+AckBTgL/AcoBTwL/AcEBPgH/
+        AUkBJQEAAf8ZAAFGAQ0B/wFBAf8BmgH/AU4B/wGrAf8BTAH/AaoB/wFMAf8BqgH/AUwB/wGqAf8BTAH/
+        AaoB/wFOAf8BqwH/AUEB/wGaAf8BAAFGAQ8B/xgAATcBMQEoAf8B2wHPAbYB/wHhAdYBuwH/AeAB1QG6
+        Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4QHWAbsB/wHbAc4BtgH/ATcBMAEnAf8aAAFYAf8BVgGA
+        Av8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGRAv8BVQGAAv8CAAFYAf8YAAFHASQBAAH/
+        Ae8BsQE5Af8B7QG4AUcB/wHsAbcBRgH/AewBtwFGAf8B7AG3AUYB/wHsAbcBRgH/Ae0BuAFHAf8B7wGx
+        ATkB/wFHASMBAAH/GQABRAEMAf8BOQHpAZEB/wFEAeYBnAH/AUMB5QGbAf8BQwHlAZsB/wFDAeUBmwH/
+        AUMB5QGbAf8BRAHmAZwB/wE5AekBkQH/AQABRAEMAf8YAAE2ATABJwH/AckBvQGoAf8BzQHCAasB/wHM
+        AcABqgH/AcwBwAGqAf8BzAHAAaoB/wHMAcABqgH/Ac0BwgGrAf8ByQG9AagB/wE2ATABJwH/GgABVwH/
+        AUkBUgH+Af8BUgGCAfwB/wFRAYEB+wH/AVEBgQH7Af8BUQGBAfsB/wFRAYEB+wH/AVIBggH8Af8BSQFS
+        Af4B/wIAAVcB/xgAAT4BHQEAAf8B1AGdAS0B/wHRAaABNQH/AdEBnwEzAf8B0QGfATMB/wHRAZ8BMwH/
+        AdEBnwEzAf8B0QGgATUB/wHUAZ0BLQH/AT4BHQEAAf8ZAAE7AQYB/wEsAdEBWQH/ATIBzwGEAf8BMQHO
+        AYMB/wExAc4BgwH/ATEBzgGDAf8BMQHOAYMB/wEyAc8BhAH/ASwB0QFZAf8BAAE7AQYB/xgAATABKgEh
         Af8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGYAf8BtQGsAZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1
-        AawBlwH/ATIBKwEjAf8aAAFQAf8BOwFBAeYB/wE/AUkB4gH/AT4BRwHiAf8BPgFHAeIB/wE+AUcB4gH/
-        AT4BRwHiAf8BPwFJAeIB/wE6AUEB5gH/AgABUAH/GAABNwEYAQAB/wG7AYcBHgH/AboBhwEhAf8BuQGH
-        ASEB/wG5AYcBIQH/AbkBhwEhAf8BuQGHASEB/wG6AYcBIQH/AbsBhwEeAf8BNwEYAQAB/xkAATUBBgH/
-        AR4BtwFIAf8BIQG0AUoB/wEhAbQBSgH/ASEBtAFKAf8BIQG0AUoB/wEhAbQBSgH/ASEBtAFKAf8BHgG3
-        AUgB/wEAATUBBgH/GAABLAElAR4B/wGhAZcBhgH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGF
-        Af8BoAGWAYUB/wGgAZYBhQH/AaEBlwGGAf8BLAElAR4B/xoAAUkB/wEoASwB0QH/ASkBLwHOAf8BKQEv
-        Ac0B/wEpAS8BzQH/ASkBLwHNAf8BKQEvAc0B/wEpAS8BzgH/ASgBLAHRAf8CAAFJAf8YAAEuARIBAAH/
-        AaIBUgESAf8BnwFPARAB/wGbAUwBDQH/AZsBTAENAf8BmwFMAQ0B/wGbAUwBDQH/AZ8BTwEQAf8BogFS
-        ARIB/wEuARIBAAH/GQABLAEBAf8BEwGfATcB/wERAZsBNQH/AQ4BmQEyAf8BDgGZATIB/wEOAZkBMgH/
-        AQ4BmQEyAf8BEQGbATUB/wETAZ8BNwH/AQABLAEBAf8YAAElAR8BGAH/AY0BhAFUAf8BigGBAVEB/wGH
-        AVsBTgH/AYcBWwFOAf8BhwFbAU4B/wGHAVsBTgH/AYoBgQFRAf8BjQGEAVQB/wElAR8BGAH/GgABQQH/
-        ARgBHAG6Af8BFQEZAbYB/wERARYBtAH/AREBFgG0Af8BEQEWAbQB/wERARYBtAH/ARUBGQG2Af8BGAEc
-        AboB/wIAAUEB/xgAASUBCgEAAf8BnwFaAS4B/wGhAYQBNwH/AaABggE1Af8BnwGBATQB/wGfAYEBNAH/
-        AaABggE1Af8BoQGEATcB/wGfAVoBLgH/ASUBDAEAAf8ZAAEjAQAB/wEwAZ0BRwH/ATkBnwFPAf8BNwGe
-        AU0B/wE1AZ0BTAH/ATUBnQFMAf8BNwGeAU0B/wE5AZ8BTwH/ATABnQFHAf8BAAEjAQAB/xgAAR4BGQET
+        AawBlwH/ATABKQEhAf8aAAFOAf8BOQE/AeYB/wE9AUcB4gH/ATwBRQHiAf8BPAFFAeIB/wE8AUUB4gH/
+        ATwBRQHiAf8BPQFHAeIB/wE4AT8B5gH/AgABTgH/GAABNQEWAQAB/wG7AYcBHAH/AboBhwEfAf8BuQGH
+        AR8B/wG5AYcBHwH/AbkBhwEfAf8BuQGHAR8B/wG6AYcBHwH/AbsBhwEcAf8BNQEWAQAB/xkAATMBBAH/
+        ARwBtwFGAf8BHwG0AUgB/wEfAbQBSAH/AR8BtAFIAf8BHwG0AUgB/wEfAbQBSAH/AR8BtAFIAf8BHAG3
+        AUYB/wEAATMBBAH/GAABKgEjARwB/wGhAZcBhgH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGF
+        Af8BoAGWAYUB/wGgAZYBhQH/AaEBlwGGAf8BKgEjARwB/xoAAUcB/wEmASoB0QH/AScBLQHOAf8BJwEt
+        Ac0B/wEnAS0BzQH/AScBLQHNAf8BJwEtAc0B/wEnAS0BzgH/ASYBKgHRAf8CAAFHAf8YAAEsARABAAH/
+        AaIBUAEQAf8BnwFNAQ4B/wGbAUoBCwH/AZsBSgELAf8BmwFKAQsB/wGbAUoBCwH/AZ8BTQEOAf8BogFQ
+        ARAB/wEsARABAAH/GQABKgEAAf8BEQGfATUB/wEPAZsBMwH/AQwBmQEwAf8BDAGZATAB/wEMAZkBMAH/
+        AQwBmQEwAf8BDwGbATMB/wERAZ8BNQH/AQABKgEAAf8YAAEjAR0BFgH/AY0BhAFSAf8BigGBAU8B/wGH
+        AVkBTAH/AYcBWQFMAf8BhwFZAUwB/wGHAVkBTAH/AYoBgQFPAf8BjQGEAVIB/wEjAR0BFgH/GgABPwH/
+        ARYBGgG6Af8BEwEXAbYB/wEPARQBtAH/AQ8BFAG0Af8BDwEUAbQB/wEPARQBtAH/ARMBFwG2Af8BFgEa
+        AboB/wIAAT8B/xgAASMBCAEAAf8BnwFYASwB/wGhAYQBNQH/AaABggEzAf8BnwGBATIB/wGfAYEBMgH/
+        AaABggEzAf8BoQGEATUB/wGfAVgBLAH/ASMBCgEAAf8ZAAEhAQAB/wEuAZ0BRQH/ATcBnwFNAf8BNQGe
+        AUsB/wEzAZ0BSgH/ATMBnQFKAf8BNQGeAUsB/wE3AZ8BTQH/AS4BnQFFAf8BAAEhAQAB/xgAARwBFwER
         Af8BlAGOAYMB/wGXAZEBiQH/AZYBkAGHAf8BlQGPAYYB/wGVAY8BhgH/AZYBkAGHAf8BlwGRAYkB/wGU
-        AY4BgwH/AR4BGQETAf8aAAE4Af8BMAExAbYB/wE4AToBtgH/ATcBOAG1Af8BNQE2AbUB/wE1ATYBtQH/
-        ATcBOAG1Af8BOAE6AbYB/wEwATEBtgH/AgABOgH/GAABGwEDAQAB/wGlAY4BTwH/Aa4BmgGEAf8BrQGa
-        AYIB/wGtAZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgFPAf8BGwECAQAB/xkAARkBAAH/
-        AU8BpAGBAf8BhQGtAZAB/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYUBrQGQAf8BUAGk
-        AYEB/wEAARoBAAH/GAABFwERAQwB/wGgAZsBlQH/AaoBpgGiAf8BqgGmAaEB/wGqAaYBoQH/AaoBpgGh
-        Af8BqgGmAaEB/wGqAaYBogH/AaABmwGVAf8BFwERAQwB/xoAATAB/wJMAbgB/wKCAb8B/wKAAb4B/wKA
-        Ab4B/wKAAb4B/wKAAb4B/wKCAb8B/wJMAbgB/wIAATEB/xgAAQ8CAAH/AZwBiwFSAf8BsAGlAZQB/wGv
-        AaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGvAaMBkgH/AbABpQGUAf8BnAGKAVIB/wEQAgAB/xkAAQ4BAAH/
-        AVMBmwGAAf8BlQGxAZ0B/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZUBsQGdAf8BUQGb
-        AYAB/wEAAQ8BAAH/GAABDQEJAQUB/wGbAZcBkwH/AbEBrwGsAf8BrwGtAaoB/wGvAa0BqgH/Aa8BrQGq
-        Af8BrwGtAaoB/wGxAa8BrAH/AZsBlwGTAf8BDgEJAQUB/xoAAScB/wJMAbAB/wKQAcEB/wKOAb8B/wKO
-        Ab8B/wKOAb8B/wKOAb8B/wKQAcEB/wJMAbAB/wIAASYB/xgAAQsCAAH/AQoCAAH/AQoCAAH/AQoCAAH/
-        AQoCAAH/AQoCAAH/AQoCAAH/AQoCAAH/AQoCAAH/AQwCAAH/GQABCwEAAf8BAAEJAQAB/wEAAQkBAAH/
-        AQABCQEAAf8BAAEJAQAB/wEAAQkBAAH/AQABCQEAAf8BAAEJAQAB/wEAAQkBAAH/AQABDAEAAf8YAAEL
-        AQcBAgH/AQoBBgEAAf8BCgEFAQEB/wEKAQUBAAH/AQoBBQEAAf8BCgEFAQAB/wEKAQUBAAH/AQoBBQEB
-        Af8BCgEGAQAB/wEMAQgBBAH/GgABIQH/AgABIgH/AgABIgH/AgABIgH/AgABIgH/AgABIgH/AgABIgH/
-        AgABIgH/AgABIgH/AgABIgH//wD/AP8ADwABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEB
-        FgAD/wEAAv8GAAL/BgAC/wYAAeABBwYAAeABBwYAAeABBwYAAeABBwYAAeABBwYAAeABBwYAAeABBwYA
-        AeABBwYAAeABBwYAAeABBwYAAv8GAAL/BgAC/wYAGP8B4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
-        AeABBwHgAQcB4AEHGP8L
+        AY4BgwH/ARwBFwERAf8aAAE2Af8BLgEvAbYB/wE2ATgBtgH/ATUBNgG1Af8BMwE0AbUB/wEzATQBtQH/
+        ATUBNgG1Af8BNgE4AbYB/wEuAS8BtgH/AgABOAH/GAABGQEBAQAB/wGlAY4BTQH/Aa4BmgGEAf8BrQGa
+        AYIB/wGtAZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgFNAf8BGQIAAf8ZAAEXAQAB/wFN
+        AaQBgQH/AYUBrQGQAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGFAa0BkAH/AU4BpAGB
+        Af8BAAEYAQAB/xgAARUBDwEKAf8BoAGbAZUB/wGqAaYBogH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/
+        AaoBpgGhAf8BqgGmAaIB/wGgAZsBlQH/ARUBDwEKAf8aAAEuAf8CSgG4Af8CggG/Af8CgAG+Af8CgAG+
+        Af8CgAG+Af8CgAG+Af8CggG/Af8CSgG4Af8CAAEvAf8YAAENAgAB/wGcAYsBUAH/AbABpQGUAf8BrwGj
+        AZIB/wGvAaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGwAaUBlAH/AZwBigFQAf8BDgIAAf8ZAAEMAQAB/wFR
+        AZsBgAH/AZUBsQGdAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGVAbEBnQH/AU8BmwGA
+        Af8BAAENAQAB/xgAAQsBBwEDAf8BmwGXAZMB/wGxAa8BrAH/Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/
+        Aa8BrQGqAf8BsQGvAawB/wGbAZcBkwH/AQwBBwEDAf8aAAElAf8CSgGwAf8CkAHBAf8CjgG/Af8CjgG/
+        Af8CjgG/Af8CjgG/Af8CkAHBAf8CSgGwAf8CAAEkAf8YAAEJAgAB/wEIAgAB/wEIAgAB/wEIAgAB/wEI
+        AgAB/wEIAgAB/wEIAgAB/wEIAgAB/wEIAgAB/wEKAgAB/xkAAQkBAAH/AQABBwEAAf8BAAEHAQAB/wEA
+        AQcBAAH/AQABBwEAAf8BAAEHAQAB/wEAAQcBAAH/AQABBwEAAf8BAAEHAQAB/wEAAQoBAAH/GAABCQEF
+        AQAB/wEIAQQBAAH/AQgBAwEAAf8BCAEDAQAB/wEIAQMBAAH/AQgBAwEAAf8BCAEDAQAB/wEIAQMBAAH/
+        AQgBBAEAAf8BCgEGAQIB/xoAAR8B/wIAASAB/wIAASAB/wIAASAB/wIAASAB/wIAASAB/wIAASAB/wIA
+        ASAB/wIAASAB/wIAASAB//8A/wD/AA8AAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYA
+        A/8BAAL/BgAC/wYAAv8GAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHg
+        AQcGAAHgAQcGAAHgAQcGAAL/BgAC/wYAAv8GABj/AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
+        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
+        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
+        AQcB4AEHAeABBxj/Cw==
 </value>
   </data>
   <metadata name="MainStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
