--- a/x360ce.App.Beta/Properties/Resources.resx
+++ b/x360ce.App.Beta/Properties/Resources.resx
@@ -289,4 +289,19 @@
   <data name="map_to_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\map_to_16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bullet_square_glass_blue" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\bullet_square_glass_blue.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bullet_square_glass_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\bullet_square_glass_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bullet_square_glass_grey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\bullet_square_glass_grey.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bullet_square_glass_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\bullet_square_glass_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bullet_square_glass_yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\bullet_square_glass_yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
