Use stored variables for PED control to allow configuration when device is offline.

--- a/x360ce.App.Beta/MainForm.resx
+++ b/x360ce.App.Beta/MainForm.resx
@@ -124,79 +124,79 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACs
-        EAAAAk1TRnQBSQFMAgEBBQEAASgBAQEoAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAAT0BUAH/AQEBSAGCAf8BBAFPAYkB/wEDAU0BiAH/AQMBTQGI
-        Af8BAwFNAYgB/wEDAU0BiAH/AQQBTwGJAf8BAQFIAYIB/wEAAT4BUQH/2QABQwFYAf8BVgHnAv8BhgHv
-        Av8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BVQHoAv8BAAFDAVgB/9kAAUIBVwH/AUkB5wH+
-        Af8BUgHqAfwB/wFRAekB+wH/AVEB6QH7Af8BUQHpAfsB/wFRAekB+wH/AVIB6gH8Af8BSQHnAf4B/wEA
-        AUIBVwH/2QABOwFOAf8BOQHOAeYB/wE9AdAB4gH/ATwBzwHiAf8BPAHPAeIB/wE8Ac8B4gH/ATwBzwHi
-        Af8BPQHQAeIB/wE4Ac8B5gH/AQABOwFOAf/ZAAEzAUcB/wEmAbgB0QH/AScBuAHOAf8BJwG3Ac0B/wEn
-        AbcBzQH/AScBtwHNAf8BJwG3Ac0B/wEnAbgBzgH/ASYBuAHRAf8BAAEzAUcB/9kAAS0BPwH/ARYBogG6
-        Af8BEwGeAbYB/wEPAZ0BtAH/AQ8BnQG0Af8BDwGdAbQB/wEPAZ0BtAH/ARMBngG2Af8BFgGiAboB/wEA
-        AS0BPwH/2QABJAE2Af8BLgGiAbYB/wE2AaQBtgH/ATUBogG1Af8BMwGiAbUB/wEzAaIBtQH/ATUBogG1
-        Af8BNgGkAbYB/wEuAaIBtgH/AQABJgE4Af/ZAAEcAS4B/wFKAagBuAH/AYIBsgG/Af8BgAGwAb4B/wGA
-        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/AUoBqAG4Af8BAAEdAS8B/9kAARUBJQH/AUoBogGw
-        Af8BkAG2AcEB/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AZABtgHBAf8BSgGiAbAB/wEA
-        ARQBJAH/2QABEAEfAf8BAAERASAB/wEAAREBIAH/AQABEQEgAf8BAAERASAB/wEAAREBIAH/AQABEQEg
-        Af8BAAERASAB/wEAAREBIAH/AQABEQEgAf//AP8A/wD/AP8A/wDeAAFAASEBAAH/AU8BKQEAAf8BVQEu
-        AQAB/wFVAS0BAAH/AVUBLQEAAf8BVQEtAQAB/wFVAS0BAAH/AVUBLgEAAf8BTwEpAQAB/wFBASEBAAH/
-        GQABPgEKAf8BAAFNAREB/wEAAVIBEwH/AQABUgETAf8BAAFSARMB/wEAAVIBEwH/AQABUgETAf8BAAFS
-        ARMB/wEAAU0BEQH/AQABPwEKAf8YAAEyASwBIwH/ATsBNAErAf8BQQE6ATAB/wFBAToBMAH/AUEBOgEw
-        Af8BQQE6ATAB/wFBAToBMAH/AUEBOgEwAf8BOwE0ASsB/wEyASwBIwH/GgABUAH/AQIBAQGCAf8CBAGJ
-        Af8BBAEDAYgB/wEEAQMBiAH/AQQBAwGIAf8BBAEDAYgB/wIEAYkB/wECAQEBggH/AgABUQH/GAABSAEl
-        AQAC/wHCAT4C/wHKAU8B/wH+AckBTgH/Af4ByQFOAf8B/gHJAU4B/wH+AckBTgL/AcoBTwL/AcEBPgH/
-        AUkBJQEAAf8ZAAFGAQ0B/wFBAf8BmgH/AU4B/wGrAf8BTAH/AaoB/wFMAf8BqgH/AUwB/wGqAf8BTAH/
-        AaoB/wFOAf8BqwH/AUEB/wGaAf8BAAFGAQ8B/xgAATcBMQEoAf8B2wHPAbYB/wHhAdYBuwH/AeAB1QG6
-        Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4QHWAbsB/wHbAc4BtgH/ATcBMAEnAf8aAAFYAf8BVgGA
-        Av8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGRAv8BVQGAAv8CAAFYAf8YAAFHASQBAAH/
-        Ae8BsQE5Af8B7QG4AUcB/wHsAbcBRgH/AewBtwFGAf8B7AG3AUYB/wHsAbcBRgH/Ae0BuAFHAf8B7wGx
-        ATkB/wFHASMBAAH/GQABRAEMAf8BOQHpAZEB/wFEAeYBnAH/AUMB5QGbAf8BQwHlAZsB/wFDAeUBmwH/
-        AUMB5QGbAf8BRAHmAZwB/wE5AekBkQH/AQABRAEMAf8YAAE2ATABJwH/AckBvQGoAf8BzQHCAasB/wHM
-        AcABqgH/AcwBwAGqAf8BzAHAAaoB/wHMAcABqgH/Ac0BwgGrAf8ByQG9AagB/wE2ATABJwH/GgABVwH/
-        AUkBUgH+Af8BUgGCAfwB/wFRAYEB+wH/AVEBgQH7Af8BUQGBAfsB/wFRAYEB+wH/AVIBggH8Af8BSQFS
-        Af4B/wIAAVcB/xgAAT4BHQEAAf8B1AGdAS0B/wHRAaABNQH/AdEBnwEzAf8B0QGfATMB/wHRAZ8BMwH/
-        AdEBnwEzAf8B0QGgATUB/wHUAZ0BLQH/AT4BHQEAAf8ZAAE7AQYB/wEsAdEBWQH/ATIBzwGEAf8BMQHO
-        AYMB/wExAc4BgwH/ATEBzgGDAf8BMQHOAYMB/wEyAc8BhAH/ASwB0QFZAf8BAAE7AQYB/xgAATABKgEh
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACq
+        EAAAAk1TRnQBSQFMAgEBBQEAATABAQEwAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wD/ACIAATwBTwH/AQABRwGCAf8BAwFOAYkB/wECAUwBiAH/AQIBTAGI
+        Af8BAgFMAYgB/wECAUwBiAH/AQMBTgGJAf8BAAFHAYIB/wEAAT0BUAH/2QABQgFXAf8BVQHnAv8BhgHv
+        Av8BhQHuAv8BhQHuAv8BhQHuAv8BhQHuAv8BhgHvAv8BVAHoAv8BAAFCAVcB/9kAAUEBVgH/AUgB5wH+
+        Af8BUQHqAfwB/wFQAekB+wH/AVAB6QH7Af8BUAHpAfsB/wFQAekB+wH/AVEB6gH8Af8BSAHnAf4B/wEA
+        AUEBVgH/2QABOgFNAf8BOAHOAeYB/wE8AdAB4gH/ATsBzwHiAf8BOwHPAeIB/wE7Ac8B4gH/ATsBzwHi
+        Af8BPAHQAeIB/wE3Ac8B5gH/AQABOgFNAf/ZAAEyAUYB/wElAbgB0QH/ASYBuAHOAf8BJgG3Ac0B/wEm
+        AbcBzQH/ASYBtwHNAf8BJgG3Ac0B/wEmAbgBzgH/ASUBuAHRAf8BAAEyAUYB/9kAASwBPgH/ARUBogG6
+        Af8BEgGeAbYB/wEOAZ0BtAH/AQ4BnQG0Af8BDgGdAbQB/wEOAZ0BtAH/ARIBngG2Af8BFQGiAboB/wEA
+        ASwBPgH/2QABIwE1Af8BLQGiAbYB/wE1AaQBtgH/ATQBogG1Af8BMgGiAbUB/wEyAaIBtQH/ATQBogG1
+        Af8BNQGkAbYB/wEtAaIBtgH/AQABJQE3Af/ZAAEbAS0B/wFJAagBuAH/AYIBsgG/Af8BgAGwAb4B/wGA
+        AbABvgH/AYABsAG+Af8BgAGwAb4B/wGCAbIBvwH/AUkBqAG4Af8BAAEcAS4B/9kAARQBJAH/AUkBogGw
+        Af8BkAG2AcEB/wGOAbQBvwH/AY4BtAG/Af8BjgG0Ab8B/wGOAbQBvwH/AZABtgHBAf8BSQGiAbAB/wEA
+        ARMBIwH/2QABDwEeAf8BAAEQAR8B/wEAARABHwH/AQABEAEfAf8BAAEQAR8B/wEAARABHwH/AQABEAEf
+        Af8BAAEQAR8B/wEAARABHwH/AQABEAEfAf//AP8A/wD/AP8A/wDeAAE/ASABAAH/AU4BKAEAAf8BVAEt
+        AQAB/wFUASwBAAH/AVQBLAEAAf8BVAEsAQAB/wFUASwBAAH/AVQBLQEAAf8BTgEoAQAB/wFAASABAAH/
+        GQABPQEJAf8BAAFMARAB/wEAAVEBEgH/AQABUQESAf8BAAFRARIB/wEAAVEBEgH/AQABUQESAf8BAAFR
+        ARIB/wEAAUwBEAH/AQABPgEJAf8YAAExASsBIgH/AToBMwEqAf8BQAE5AS8B/wFAATkBLwH/AUABOQEv
+        Af8BQAE5AS8B/wFAATkBLwH/AUABOQEvAf8BOgEzASoB/wExASsBIgH/GgABTwH/AQEBAAGCAf8CAwGJ
+        Af8BAwECAYgB/wEDAQIBiAH/AQMBAgGIAf8BAwECAYgB/wIDAYkB/wEBAQABggH/AgABUAH/GAABRwEk
+        AQAC/wHCAT0C/wHKAU4B/wH+AckBTQH/Af4ByQFNAf8B/gHJAU0B/wH+AckBTQL/AcoBTgL/AcEBPQH/
+        AUgBJAEAAf8ZAAFFAQwB/wFAAf8BmgH/AU0B/wGrAf8BSwH/AaoB/wFLAf8BqgH/AUsB/wGqAf8BSwH/
+        AaoB/wFNAf8BqwH/AUAB/wGaAf8BAAFFAQ4B/xgAATYBMAEnAf8B2wHPAbYB/wHhAdYBuwH/AeAB1QG6
+        Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4QHWAbsB/wHbAc4BtgH/ATYBLwEmAf8aAAFXAf8BVQGA
+        Av8BhgGRAv8BhQGPAv8BhQGPAv8BhQGPAv8BhQGPAv8BhgGRAv8BVAGAAv8CAAFXAf8YAAFGASMBAAH/
+        Ae8BsQE4Af8B7QG4AUYB/wHsAbcBRQH/AewBtwFFAf8B7AG3AUUB/wHsAbcBRQH/Ae0BuAFGAf8B7wGx
+        ATgB/wFGASIBAAH/GQABQwELAf8BOAHpAZEB/wFDAeYBnAH/AUIB5QGbAf8BQgHlAZsB/wFCAeUBmwH/
+        AUIB5QGbAf8BQwHmAZwB/wE4AekBkQH/AQABQwELAf8YAAE1AS8BJgH/AckBvQGoAf8BzQHCAasB/wHM
+        AcABqgH/AcwBwAGqAf8BzAHAAaoB/wHMAcABqgH/Ac0BwgGrAf8ByQG9AagB/wE1AS8BJgH/GgABVgH/
+        AUgBUQH+Af8BUQGCAfwB/wFQAYEB+wH/AVABgQH7Af8BUAGBAfsB/wFQAYEB+wH/AVEBggH8Af8BSAFR
+        Af4B/wIAAVYB/xgAAT0BHAEAAf8B1AGdASwB/wHRAaABNAH/AdEBnwEyAf8B0QGfATIB/wHRAZ8BMgH/
+        AdEBnwEyAf8B0QGgATQB/wHUAZ0BLAH/AT0BHAEAAf8ZAAE6AQUB/wErAdEBWAH/ATEBzwGEAf8BMAHO
+        AYMB/wEwAc4BgwH/ATABzgGDAf8BMAHOAYMB/wExAc8BhAH/ASsB0QFYAf8BAAE6AQUB/xgAAS8BKQEg
         Af8BtQGsAZcB/wG1Aa0BmQH/AbUBrAGYAf8BtQGsAZgB/wG1AawBmAH/AbUBrAGYAf8BtQGtAZkB/wG1
-        AawBlwH/ATABKQEhAf8aAAFOAf8BOQE/AeYB/wE9AUcB4gH/ATwBRQHiAf8BPAFFAeIB/wE8AUUB4gH/
-        ATwBRQHiAf8BPQFHAeIB/wE4AT8B5gH/AgABTgH/GAABNQEWAQAB/wG7AYcBHAH/AboBhwEfAf8BuQGH
-        AR8B/wG5AYcBHwH/AbkBhwEfAf8BuQGHAR8B/wG6AYcBHwH/AbsBhwEcAf8BNQEWAQAB/xkAATMBBAH/
-        ARwBtwFGAf8BHwG0AUgB/wEfAbQBSAH/AR8BtAFIAf8BHwG0AUgB/wEfAbQBSAH/AR8BtAFIAf8BHAG3
-        AUYB/wEAATMBBAH/GAABKgEjARwB/wGhAZcBhgH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGF
-        Af8BoAGWAYUB/wGgAZYBhQH/AaEBlwGGAf8BKgEjARwB/xoAAUcB/wEmASoB0QH/AScBLQHOAf8BJwEt
-        Ac0B/wEnAS0BzQH/AScBLQHNAf8BJwEtAc0B/wEnAS0BzgH/ASYBKgHRAf8CAAFHAf8YAAEsARABAAH/
-        AaIBUAEQAf8BnwFNAQ4B/wGbAUoBCwH/AZsBSgELAf8BmwFKAQsB/wGbAUoBCwH/AZ8BTQEOAf8BogFQ
-        ARAB/wEsARABAAH/GQABKgEAAf8BEQGfATUB/wEPAZsBMwH/AQwBmQEwAf8BDAGZATAB/wEMAZkBMAH/
-        AQwBmQEwAf8BDwGbATMB/wERAZ8BNQH/AQABKgEAAf8YAAEjAR0BFgH/AY0BhAFSAf8BigGBAU8B/wGH
-        AVkBTAH/AYcBWQFMAf8BhwFZAUwB/wGHAVkBTAH/AYoBgQFPAf8BjQGEAVIB/wEjAR0BFgH/GgABPwH/
-        ARYBGgG6Af8BEwEXAbYB/wEPARQBtAH/AQ8BFAG0Af8BDwEUAbQB/wEPARQBtAH/ARMBFwG2Af8BFgEa
-        AboB/wIAAT8B/xgAASMBCAEAAf8BnwFYASwB/wGhAYQBNQH/AaABggEzAf8BnwGBATIB/wGfAYEBMgH/
-        AaABggEzAf8BoQGEATUB/wGfAVgBLAH/ASMBCgEAAf8ZAAEhAQAB/wEuAZ0BRQH/ATcBnwFNAf8BNQGe
-        AUsB/wEzAZ0BSgH/ATMBnQFKAf8BNQGeAUsB/wE3AZ8BTQH/AS4BnQFFAf8BAAEhAQAB/xgAARwBFwER
+        AawBlwH/AS8BKAEgAf8aAAFNAf8BOAE+AeYB/wE8AUYB4gH/ATsBRAHiAf8BOwFEAeIB/wE7AUQB4gH/
+        ATsBRAHiAf8BPAFGAeIB/wE3AT4B5gH/AgABTQH/GAABNAEVAQAB/wG7AYcBGwH/AboBhwEeAf8BuQGH
+        AR4B/wG5AYcBHgH/AbkBhwEeAf8BuQGHAR4B/wG6AYcBHgH/AbsBhwEbAf8BNAEVAQAB/xkAATIBAwH/
+        ARsBtwFFAf8BHgG0AUcB/wEeAbQBRwH/AR4BtAFHAf8BHgG0AUcB/wEeAbQBRwH/AR4BtAFHAf8BGwG3
+        AUUB/wEAATIBAwH/GAABKQEiARsB/wGhAZcBhgH/AaABlgGFAf8BoAGWAYUB/wGgAZYBhQH/AaABlgGF
+        Af8BoAGWAYUB/wGgAZYBhQH/AaEBlwGGAf8BKQEiARsB/xoAAUYB/wElASkB0QH/ASYBLAHOAf8BJgEs
+        Ac0B/wEmASwBzQH/ASYBLAHNAf8BJgEsAc0B/wEmASwBzgH/ASUBKQHRAf8CAAFGAf8YAAErAQ8BAAH/
+        AaIBTwEPAf8BnwFMAQ0B/wGbAUkBCgH/AZsBSQEKAf8BmwFJAQoB/wGbAUkBCgH/AZ8BTAENAf8BogFP
+        AQ8B/wErAQ8BAAH/GQABKQEAAf8BEAGfATQB/wEOAZsBMgH/AQsBmQEvAf8BCwGZAS8B/wELAZkBLwH/
+        AQsBmQEvAf8BDgGbATIB/wEQAZ8BNAH/AQABKQEAAf8YAAEiARwBFQH/AY0BhAFRAf8BigGBAU4B/wGH
+        AVgBSwH/AYcBWAFLAf8BhwFYAUsB/wGHAVgBSwH/AYoBgQFOAf8BjQGEAVEB/wEiARwBFQH/GgABPgH/
+        ARUBGQG6Af8BEgEWAbYB/wEOARMBtAH/AQ4BEwG0Af8BDgETAbQB/wEOARMBtAH/ARIBFgG2Af8BFQEZ
+        AboB/wIAAT4B/xgAASIBBwEAAf8BnwFXASsB/wGhAYQBNAH/AaABggEyAf8BnwGBATEB/wGfAYEBMQH/
+        AaABggEyAf8BoQGEATQB/wGfAVcBKwH/ASIBCQEAAf8ZAAEgAQAB/wEtAZ0BRAH/ATYBnwFMAf8BNAGe
+        AUoB/wEyAZ0BSQH/ATIBnQFJAf8BNAGeAUoB/wE2AZ8BTAH/AS0BnQFEAf8BAAEgAQAB/xgAARsBFgEQ
         Af8BlAGOAYMB/wGXAZEBiQH/AZYBkAGHAf8BlQGPAYYB/wGVAY8BhgH/AZYBkAGHAf8BlwGRAYkB/wGU
-        AY4BgwH/ARwBFwERAf8aAAE2Af8BLgEvAbYB/wE2ATgBtgH/ATUBNgG1Af8BMwE0AbUB/wEzATQBtQH/
-        ATUBNgG1Af8BNgE4AbYB/wEuAS8BtgH/AgABOAH/GAABGQEBAQAB/wGlAY4BTQH/Aa4BmgGEAf8BrQGa
-        AYIB/wGtAZoBggH/Aa0BmgGCAf8BrQGaAYIB/wGuAZoBhAH/AaUBjgFNAf8BGQIAAf8ZAAEXAQAB/wFN
-        AaQBgQH/AYUBrQGQAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BgwGsAY8B/wGFAa0BkAH/AU4BpAGB
-        Af8BAAEYAQAB/xgAARUBDwEKAf8BoAGbAZUB/wGqAaYBogH/AaoBpgGhAf8BqgGmAaEB/wGqAaYBoQH/
-        AaoBpgGhAf8BqgGmAaIB/wGgAZsBlQH/ARUBDwEKAf8aAAEuAf8CSgG4Af8CggG/Af8CgAG+Af8CgAG+
-        Af8CgAG+Af8CgAG+Af8CggG/Af8CSgG4Af8CAAEvAf8YAAENAgAB/wGcAYsBUAH/AbABpQGUAf8BrwGj
-        AZIB/wGvAaMBkgH/Aa8BowGSAf8BrwGjAZIB/wGwAaUBlAH/AZwBigFQAf8BDgIAAf8ZAAEMAQAB/wFR
-        AZsBgAH/AZUBsQGdAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BkwGvAZsB/wGVAbEBnQH/AU8BmwGA
-        Af8BAAENAQAB/xgAAQsBBwEDAf8BmwGXAZMB/wGxAa8BrAH/Aa8BrQGqAf8BrwGtAaoB/wGvAa0BqgH/
-        Aa8BrQGqAf8BsQGvAawB/wGbAZcBkwH/AQwBBwEDAf8aAAElAf8CSgGwAf8CkAHBAf8CjgG/Af8CjgG/
-        Af8CjgG/Af8CjgG/Af8CkAHBAf8CSgGwAf8CAAEkAf8YAAEJAgAB/wEIAgAB/wEIAgAB/wEIAgAB/wEI
-        AgAB/wEIAgAB/wEIAgAB/wEIAgAB/wEIAgAB/wEKAgAB/xkAAQkBAAH/AQABBwEAAf8BAAEHAQAB/wEA
-        AQcBAAH/AQABBwEAAf8BAAEHAQAB/wEAAQcBAAH/AQABBwEAAf8BAAEHAQAB/wEAAQoBAAH/GAABCQEF
-        AQAB/wEIAQQBAAH/AQgBAwEAAf8BCAEDAQAB/wEIAQMBAAH/AQgBAwEAAf8BCAEDAQAB/wEIAQMBAAH/
-        AQgBBAEAAf8BCgEGAQIB/xoAAR8B/wIAASAB/wIAASAB/wIAASAB/wIAASAB/wIAASAB/wIAASAB/wIA
-        ASAB/wIAASAB/wIAASAB//8A/wD/AA8AAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYA
-        A/8BAAL/BgAC/wYAAv8GAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHgAQcGAAHg
-        AQcGAAHgAQcGAAHgAQcGAAL/BgAC/wYAAv8GABj/AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
-        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
-        AQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHg
-        AQcB4AEHAeABBxj/Cw==
+        AY4BgwH/ARsBFgEQAf8aAAE1Af8BLQEuAbYB/wE1ATcBtgH/ATQBNQG1Af8BMgEzAbUB/wEyATMBtQH/
+        ATQBNQG1Af8BNQE3AbYB/wEtAS4BtgH/AgABNwH/GAABGAIAAf8BpQGOAUwB/wGuAZoBhAH/Aa0BmgGC
+        Af8BrQGaAYIB/wGtAZoBggH/Aa0BmgGCAf8BrgGaAYQB/wGlAY4BTAH/ARgCAAH/GQABFgEAAf8BTAGk
+        AYEB/wGFAa0BkAH/AYMBrAGPAf8BgwGsAY8B/wGDAawBjwH/AYMBrAGPAf8BhQGtAZAB/wFNAaQBgQH/
+        AQABFwEAAf8YAAEUAQ4BCQH/AaABmwGVAf8BqgGmAaIB/wGqAaYBoQH/AaoBpgGhAf8BqgGmAaEB/wGq
+        AaYBoQH/AaoBpgGiAf8BoAGbAZUB/wEUAQ4BCQH/GgABLQH/AkkBuAH/AoIBvwH/AoABvgH/AoABvgH/
+        AoABvgH/AoABvgH/AoIBvwH/AkkBuAH/AgABLgH/GAABDAIAAf8BnAGLAU8B/wGwAaUBlAH/Aa8BowGS
+        Af8BrwGjAZIB/wGvAaMBkgH/Aa8BowGSAf8BsAGlAZQB/wGcAYoBTwH/AQ0CAAH/GQABCwEAAf8BUAGb
+        AYAB/wGVAbEBnQH/AZMBrwGbAf8BkwGvAZsB/wGTAa8BmwH/AZMBrwGbAf8BlQGxAZ0B/wFOAZsBgAH/
+        AQABDAEAAf8YAAEKAQYBAgH/AZsBlwGTAf8BsQGvAawB/wGvAa0BqgH/Aa8BrQGqAf8BrwGtAaoB/wGv
+        Aa0BqgH/AbEBrwGsAf8BmwGXAZMB/wELAQYBAgH/GgABJAH/AkkBsAH/ApABwQH/Ao4BvwH/Ao4BvwH/
+        Ao4BvwH/Ao4BvwH/ApABwQH/AkkBsAH/AgABIwH/GAABCAIAAf8BBwIAAf8BBwIAAf8BBwIAAf8BBwIA
+        Af8BBwIAAf8BBwIAAf8BBwIAAf8BBwIAAf8BCQIAAf8ZAAEIAQAB/wEAAQYBAAH/AQABBgEAAf8BAAEG
+        AQAB/wEAAQYBAAH/AQABBgEAAf8BAAEGAQAB/wEAAQYBAAH/AQABBgEAAf8BAAEJAQAB/xgAAQgBBAEA
+        Af8BBwEDAQAB/wEHAQIBAAH/AQcBAgEAAf8BBwECAQAB/wEHAQIBAAH/AQcBAgEAAf8BBwECAQAB/wEH
+        AQMBAAH/AQkBBQEBAf8aAAEeAf8CAAEfAf8CAAEfAf8CAAEfAf8CAAEfAf8CAAEfAf8CAAEfAf8CAAEf
+        Af8CAAEfAf8CAAEfAf//AP8A/wAPAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/
+        AQAC/wYAAv8GAAL/BgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEHBgAB4AEH
+        BgAB4AEHBgAB4AEHBgAC/wYAAv8GAAL/BgAY/wHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
+        AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
+        AeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEHAeABBwHgAQcB4AEH
+        AeABBwHgAQcY/ws=
 </value>
   </data>
   <metadata name="MainStatusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
